--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
-authors = ["Vitor Nesello <vitornesello@gmail.com>"]
 name = "RVRP"
 uuid = "4d64b7be-cba2-11e8-3187-67736c95197e"
+authors = ["Vitor Nesello <vitornesello@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+JSON2 = "2535ab7d-5cd8-5a07-80ac-9b1792aadce3"
