updating package name

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "RVRP"
+name = "RichVehicleRoutingProblem"
 uuid = "4d64b7be-cba2-11e8-3187-67736c95197e"
 authors = ["Vitor Nesello <vitornesello@gmail.com>"]
 version = "0.1.0"
