--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,6 @@ authors = ["Vitor Nesello <vitornesello@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSON2 = "2535ab7d-5cd8-5a07-80ac-9b1792aadce3"
+Scanner = "c75548ad-e7e3-5214-b9a0-71e99b6be1af"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
